Städat upp bokningslogik i SmartQueueController: förbättrad inmatningsvalidering, borttagna onödiga dubbelkollar och förenklad hantering av bokningar.